--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <button id="find-me">Show my location</button><br />
     <p id="status"></p>
     <a id="map-link" target="_blank"></a>
-    <script src="app3.js"></script>
+    <script src="app.js"></script>
 </body>
 </html> 
