--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <button id="find-me">Show my location</button><br />
     <p id="status"></p>
     <a id="map-link" target="_blank"></a>
+    
+    <p id="nav-status">Nav status: </p>
+
     <script src="app.js"></script>
 </body>
 </html> 
