--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     
     <p id="nav-status">Nav status: </p>
 
-    <script src="app.js"></script>
+    <script src="app3.js"></script>
 </body>
 </html> 
