--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="find-me">Show my location</button><br />
-    <p id="status"></p>
-    <a id="map-link" target="_blank"></a>
-    
-    <script src="app3.js"></script>
+    <p>Update coordinates every 1 sec</p>
+
+    <button onclick="getLocationUpdate()">Start</button>
+
+    <p id="location"></p>
+
+    <script src="appNav4.js"></script>
 </body>
-</html> 
+</html>
