--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <button onclick="getLocationUpdate()">Start</button>
 
-    <p id="location"></p>
+    <p id="geolocation"></p>
 
-    <script src="appNav4.js"></script>
+    <script src="appNav2.js"></script>
 </body>
 </html>
