--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Update coordinates every 1 sec</p>
-
-    <button onclick="getLocationUpdate()">Start</button>
-
-    <p id="geolocation"></p>
+    
+    <button id="find-me">Track my location</button><br />
+    <p id="status"></p>
+    <a id="map-link" target="_blank"></a>
 
     <script src="appNav2.js"></script>
 </body>
