--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <button id="find-me">Track my location</button><br />
     <p id="status"></p>
     <a id="map-link" target="_blank"></a>
+    <p id="geolocation">geolocation</p>
 
     <script src="appNav2.js"></script>
 </body>
