--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     
-    <button id="find-me">Track my location</button><br />
+<!--     <button id="find-me">Track my location</button><br />
     <p id="status"></p>
     <a id="map-link" target="_blank"></a>
-    <p id="geolocation">geolocation</p>
+    <p id="geolocation">geolocation</p> -->
+    
+    <button id="find-me">Show my location</button><br />
+    <p id="status"></p>
+    <a id="map-link" target="_blank"></a>
 
-    <script src="appNav2.js"></script>
+    <script src="app5.js"></script>
 </body>
 </html>
