--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <button id="find-me">Show my location</button><br />
     <p id="status"></p>
     <a id="map-link" target="_blank"></a>
+    <div id="demoMap" style="height:250px"></div>
 
     <script src="app5.js"></script>
 </body>
