--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a id="map-link" target="_blank"></a>
     <div id="demoMap" style="height:250px"></div>
 
+    <script src="OpenLayers.js"></script>
     <script src="app5.js"></script>
 </body>
 </html>
