--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a id="map-link" target="_blank"></a>
     <div id="demoMap" style="height:250px"></div>
 
-    <script src="OpenLayers.js"></script>
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <script src="app5.js"></script>
 </body>
 </html>
