--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="find-me">Track my location</button><br />
     <p id="status"></p>
     <a id="map-link" target="_blank"></a>
-    <p id="details"></p>
+    <p id="details">details:</p>
 
 <!--     <button id="find-me">Show my location</button><br />
     <p id="status"></p>
