--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     
     <button id="find-me">Track my location</button><br />
+    <p id="count">Timer: </p>
     <p id="status"></p>
     <a id="map-link" target="_blank"></a>
     <p id="details">details:</p>
