--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
 <body>
     
     <button id="find-me">Track my location</button><br />
-    <p id="count">Timer: </p>
     <p id="status"></p>
     <a id="map-link" target="_blank"></a>
-    <p id="details">details:</p>
-
-<!--     <button id="find-me">Show my location</button><br />
-    <p id="status"></p>
-    <a id="map-link" target="_blank"></a>
-    <div id="map"></div> -->
+    <p id="details"></p>
 
     <script src="app5.js"></script>
 </body>
