--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <!--     <button id="find-me">Track my location</button>
     <br />
     <br />
-    <button id="stop" onclick="buttonClickHandler()">Stop tracking</button> -->
+    <button id="stop" onclick="buttonClickHandler()">Stop tracking</button>
     
-    <script src="appTest.js"></script>
+    <script src="appTest.js"></script> -->
 </body>
 </html>
