--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p id="status"></p>
     <a id="map-link" target="_blank"></a>
     <p id="details"></p>
+    
+    <button id="find-shell">Find nearest Shell</button>
 
     <script src="app5.js"></script>
     
